--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,17 @@
     "support": {
         "issues": "http://github.com/sheadawson/silverstripe-linkable/issues"
     },
+    "repositories": [
+        {
+            "type": "github",
+            "url": "git@github.com:MadeHQ/Embed.git"
+        }
+    ],
     "require": {
         "silverstripe/vendor-plugin": "^1.0",
         "silverstripe/framework": "^4.0 || ^5.0",
         "unclecheese/display-logic": "*",
-        "embed/embed": "^4.0"
+        "embed/embed": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
