--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         "silverstripe/vendor-plugin": "^1.0",
         "silverstripe/framework": "^4.0 || ^5.0",
         "unclecheese/display-logic": "*",
-        "embed/embed": "dev-master"
+        "embed/embed": "^3"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
